Se crea el menu de navegación pero solo un boseto de lo que seria y clases

--- a/PixelPacker/src/main/AndroidManifest.xml
+++ b/PixelPacker/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".NavigationView"
+            android:name=".uiNavigation.NavigationScreen"
             android:label="@string/app_name"
             android:theme="@style/Theme.ProyectoFinalCM20242Gr01"/>
     </application>
