--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,4 +1,5 @@
 [versions]
+activityComposeVersion = "1.6.0"
 agp = "8.5.2"
 kotlin = "1.9.0"
 coreKtx = "1.13.1"
@@ -11,6 +12,7 @@ composeBom = "2024.09.03"
 navigationCompose = "2.8.2"
 
 [libraries]
+androidx-activity-compose-v160 = { module = "androidx.activity:activity-compose", version.ref = "activityComposeVersion" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
